--- a/Pipeline/Extraction_sommaire/compute_base_txt.ipynb
+++ b/Pipeline/Extraction_sommaire/compute_base_txt.ipynb
@@ -30,40 +30,67 @@
   "nbformat_minor": 1,
   "cells": [
     {
-      "execution_count": 0,
       "cell_type": "code",
-      "metadata": {},
+      "execution_count": null,
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\nimport os\nimport sklearn\nimport pickle\nimport re\nfrom unidecode import unidecode\n# Read recipe inputs\netudes_impact_txt_projetsenv \u003d dataiku.Folder(\"YPXBGHtV\")\netudes_impact \u003d etudes_impact_txt_projetsenv.get_path()\nprint(etudes_impact)\nbase \u003d os.path.join(etudes_impact, str(os.listdir(etudes_impact)[0]))\n#base\u003dpickle.load(open(str(base),\u0027r\u0027))\nwith open(base,\u0027r\u0027) as f:\n    ouais\u003dunidecode(f.read())\nouais"
+        "import pandas as pd, numpy as np\r\n",
+        "import os\r\n",
+        "import sklearn\r\n",
+        "import pickle\r\n",
+        "import re\r\n",
+        "from unidecode import unidecode\r\n",
+        "# Read recipe inputs\r\n",
+        "etudes_impact_txt_projetsenv = dataiku.Folder(\"YPXBGHtV\")\r\n",
+        "etudes_impact = etudes_impact_txt_projetsenv.get_path()\r\n",
+        "print(etudes_impact)\r\n",
+        "base = os.path.join(etudes_impact, str(os.listdir(etudes_impact)[0]))\r\n",
+        "#base=pickle.load(open(str(base),'r'))\r\n",
+        "with open(base,'r') as f:\r\n",
+        "    ouais=unidecode(f.read())\r\n",
+        "ouais"
       ],
-      "outputs": []
+      "outputs": [],
+      "metadata": {}
     },
     {
-      "execution_count": 0,
       "cell_type": "code",
-      "metadata": {},
+      "execution_count": null,
       "source": [
-        "fichiers\u003dos.listdir(etudes_impact)\nbase\u003d{}\nfor k in range(len(fichiers)):\n    path \u003d os.path.join(etudes_impact, str(fichiers[k]))\n    with open(path,\u0027r\u0027, encoding\u003d\u0027utf-8\u0027) as f:\n        base[k]\u003d[fichiers[k][:-8],f.read()]\nbase_txt\u003dpd.DataFrame.from_dict(base).T\nbase_txt.columns\u003d[\u0027num_etude\u0027,\u0027texte\u0027]\nbase_txt"
+        "fichiers=os.listdir(etudes_impact)\r\n",
+        "base={}\r\n",
+        "for k in range(len(fichiers)):\r\n",
+        "    path = os.path.join(etudes_impact, str(fichiers[k]))\r\n",
+        "    with open(path,'r', encoding='utf-8') as f:\r\n",
+        "        base[k]=[fichiers[k][:-8],f.read()]\r\n",
+        "base_txt=pd.DataFrame.from_dict(base).T\r\n",
+        "base_txt.columns=['num_etude','texte']\r\n",
+        "base_txt"
       ],
-      "outputs": []
+      "outputs": [],
+      "metadata": {}
     },
     {
-      "execution_count": 0,
       "cell_type": "code",
-      "metadata": {},
+      "execution_count": null,
       "source": [
         "base_txt.texte[51]"
       ],
-      "outputs": []
+      "outputs": [],
+      "metadata": {}
     },
     {
-      "execution_count": 0,
       "cell_type": "code",
-      "metadata": {},
+      "execution_count": null,
       "source": [
-        "base_txt_df \u003d base_txt # Compute a Pandas dataframe to write into base_txt\n\n\n# Write recipe outputs\nbase_txt \u003d dataiku.Dataset(\"base_txt\")\nbase_txt.write_with_schema(base_txt_df)"
+        "base_txt_df = base_txt # Compute a Pandas dataframe to write into base_txt\n",
+        "\n",
+        "\n",
+        "# Write recipe outputs\n",
+        "base_txt = dataiku.Dataset(\"base_txt\")\n",
+        "base_txt.write_with_schema(base_txt_df)"
       ],
-      "outputs": []
+      "outputs": [],
+      "metadata": {}
     }
   ]
 }
