MAJ dossier Exploration

--- a/Theo/Exploration/BERT_Score.ipynb
+++ b/Theo/Exploration/BERT_Score.ipynb
@@ -1,13 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Notebook du développement de BERTScore\r\n",
+    "\r\n",
+    "Processus de développement du modèle BERTScore"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "source": [
+    "import time\r\n",
+    "import pickle\r\n",
+    "from pathlib import Path\r\n",
+    "# !pip install gensim\r\n",
+    "import gensim\r\n",
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
+    "import sklearn\r\n",
+    "import re\r\n",
+    "#from unidecode import unidecode\r\n",
+    "import functools\r\n",
+    "import operator\r\n",
+    "import psutil\r\n",
+    "from joblib import Parallel,delayed\r\n",
+    "from functools import partial\r\n",
+    "import time"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Requirement already satisfied: gensim in /opt/conda/lib/python3.7/site-packages (4.0.1)\n",
       "Requirement already satisfied: numpy>=1.11.3 in /opt/conda/lib/python3.7/site-packages (from gensim) (1.18.1)\n",
@@ -16,33 +42,21 @@
      ]
     }
    ],
-   "source": [
-    "import time\n",
-    "import pickle\n",
-    "from pathlib import Path\n",
-    "# !pip install gensim\n",
-    "import gensim\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import sklearn\n",
-    "import re\n",
-    "#from unidecode import unidecode\n",
-    "import functools\n",
-    "import operator\n",
-    "import psutil\n",
-    "from joblib import Parallel,delayed\n",
-    "from functools import partial\n",
-    "import time"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "source": [
+    "# !pip install torch\r\n",
+    "import torch\r\n",
+    "import torch.nn as nn\r\n",
+    "from tqdm import tqdm"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Collecting torch\n",
       "  Downloading torch-1.8.1-cp37-cp37m-manylinux1_x86_64.whl (804.1 MB)\n",
@@ -54,51 +68,51 @@
      ]
     }
    ],
-   "source": [
-    "# !pip install torch\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from tqdm import tqdm"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "source": [
+    "embedding_section_W2V=pickle.load(open('embedding_section_W2V.pickle','rb'))\r\n",
+    "embedding_section_bert=pickle.load(open('embedding_section_bert.pickle','rb'))\r\n",
+    "print(type(embedding_section_bert),type(embedding_section_bert[0]),type(embedding_section_bert[0][0]))\r\n",
+    "len(embedding_section_bert)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "<class 'list'> <class 'list'> <class 'torch.Tensor'>\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "405"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 8
     }
    ],
-   "source": [
-    "embedding_section_W2V=pickle.load(open('embedding_section_W2V.pickle','rb'))\n",
-    "embedding_section_bert=pickle.load(open('embedding_section_bert.pickle','rb'))\n",
-    "print(type(embedding_section_bert),type(embedding_section_bert[0]),type(embedding_section_bert[0][0]))\n",
-    "len(embedding_section_bert)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "source": [
+    "print(\"Il y a \",len(embedding_section_bert),\"articles\")\r\n",
+    "section_mean=round(np.mean([len(i) for i in embedding_section_bert]),2)\r\n",
+    "print(\"avec en moyenne\",section_mean,\"phrases\")\r\n",
+    "print(\"chaque phrase de dimension\",embedding_section_bert[0][0].shape)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Il y a  405 articles\n",
       "avec en moyenne 20.86 phrases\n",
@@ -106,133 +120,132 @@
      ]
     }
    ],
-   "source": [
-    "print(\"Il y a \",len(embedding_section_bert),\"articles\")\n",
-    "section_mean=round(np.mean([len(i) for i in embedding_section_bert]),2)\n",
-    "print(\"avec en moyenne\",section_mean,\"phrases\")\n",
-    "print(\"chaque phrase de dimension\",embedding_section_bert[0][0].shape)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "source": [
+    "ARTBERT=[torch.as_tensor([embedding_section_bert[k][i].tolist() for i in range(len(embedding_section_bert[k]))]) for k in range(len(embedding_section_bert))]\r\n",
+    "#ARTBERT=torch.as_tensor(ARTBERT)\r\n",
+    "len(ARTBERT),len(ARTBERT[0]),len(ARTBERT[0][0])"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(405, 41, 768)"
       ]
      },
-     "execution_count": 46,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 46
     }
    ],
-   "source": [
-    "ARTBERT=[torch.as_tensor([embedding_section_bert[k][i].tolist() for i in range(len(embedding_section_bert[k]))]) for k in range(len(embedding_section_bert))]\n",
-    "#ARTBERT=torch.as_tensor(ARTBERT)\n",
-    "len(ARTBERT),len(ARTBERT[0]),len(ARTBERT[0][0])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "source": [
+    "# On crée le Vecteur Sémantique Principal, proxy de l'idée principale du paragraphe\r\n",
+    "VSP=[i.mean(dim=0) for i in ARTBERT]\r\n",
+    "len(VSP),VSP[0].shape"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(405, torch.Size([768]))"
       ]
      },
-     "execution_count": 47,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 47
     }
    ],
-   "source": [
-    "VSP=[i.mean(dim=0) for i in ARTBERT]\n",
-    "len(VSP),VSP[0].shape"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "source": [
+    "# Définition de la fonction de similarité\r\n",
+    "cos_sim=torch.nn.CosineSimilarity(dim=-1)\r\n",
+    "cos_sim(ARTBERT[0][:3],VSP[0])"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "tensor([0.9893, 0.9104, 0.9858])"
       ]
      },
-     "execution_count": 54,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 54
     }
    ],
-   "source": [
-    "cos_sim=torch.nn.CosineSimilarity(dim=-1)\n",
-    "cos_sim(ARTBERT[0][:3],VSP[0])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "source": [
+    "# Tests\r\n",
+    "cos_sim=torch.nn.CosineSimilarity(dim=0)\r\n",
+    "cos_sim(ARTBERT[0][0],VSP[0]),cos_sim(ARTBERT[0][1],VSP[0]),cos_sim(ARTBERT[0][2],VSP[0])"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(tensor(0.9893), tensor(0.9104), tensor(0.9858))"
       ]
      },
-     "execution_count": 55,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 55
     }
    ],
-   "source": [
-    "cos_sim=torch.nn.CosineSimilarity(dim=0)\n",
-    "cos_sim(ARTBERT[0][0],VSP[0]),cos_sim(ARTBERT[0][1],VSP[0]),cos_sim(ARTBERT[0][2],VSP[0])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "cos_sim=torch.nn.CosineSimilarity(dim=-1)\n",
+    "# Calcul de similarité de chaque phrase pour chaque paragraphe\r\n",
+    "cos_sim=torch.nn.CosineSimilarity(dim=-1)\r\n",
     "similarite=[cos_sim(ARTBERT[i][:],VSP[i]) for i in range(len(VSP))]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "top_similarite=[i.topk(k=3)[1] if i.shape[0]>3 else torch.as_tensor([0,1,2]) for i in similarite]\n",
-    "#top_similarite"
-   ]
+    "# On récupère, pour chaque paragraphe, les phrases les plus similaires au proxy \r\n",
+    "top_similarite=[i.topk(k=3)[1] if i.shape[0]>3 else torch.as_tensor([0,1,2]) for i in similarite]\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "pickle.dump(top_similarite,open(\"OrangeSum_BERT_Score.pickle\",'wb'))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
