--- a/Theo/Exploration/make_metrics.ipynb
+++ b/Theo/Exploration/make_metrics.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at camembert-base were not used when initializing CamembertModel: ['lm_head.bias', 'lm_head.decoder.weight', 'lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.bias', 'lm_head.layer_norm.weight']\n",
+      "Some weights of the model checkpoint at camembert-base were not used when initializing CamembertModel: ['lm_head.layer_norm.bias', 'lm_head.dense.bias', 'lm_head.bias', 'lm_head.dense.weight', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight']\n",
       "- This IS expected if you are initializing CamembertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing CamembertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -52,51 +52,47 @@
     "import gensim\n",
     "import sys\n",
     "import gc\n",
-    "\n",
-    "from fats import BERTScore, Make_Embedding,TextRank,Random_summary,Lead_3,SMHA_Linear_classifier\n",
-    "from fats import Make_Extractive\n",
-    "\n",
-    "os.chdir(\"/home/jovyan/work\")"
+    "import fats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at camembert-base were not used when initializing CamembertModel: ['lm_head.bias', 'lm_head.decoder.weight', 'lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.bias', 'lm_head.layer_norm.weight']\n",
+      "Some weights of the model checkpoint at camembert-base were not used when initializing CamembertModel: ['lm_head.layer_norm.bias', 'lm_head.dense.bias', 'lm_head.bias', 'lm_head.dense.weight', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight']\n",
       "- This IS expected if you are initializing CamembertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing CamembertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
     }
    ],
    "source": [
-    "Paragraphes=pickle.load(open('Paragraphes.pickle','rb'))\n",
-    "Paragraphes=functools.reduce(operator.iconcat, Paragraphes, [])\n",
+    "Paragraphes=pickle.load(open('Paragraphes_.pickle','rb'))\n",
+    "# Paragraphes=functools.reduce(operator.iconcat, Paragraphes, [])\n",
     "\n",
-    "from fats import Make_Embedding\n",
+    "# from fats import Make_Embedding\n",
     "from transformers import CamembertTokenizer,CamembertModel\n",
     "tok=CamembertTokenizer('MLSUM_tokenizer.model')\n",
     "camem=CamembertModel.from_pretrained(\"camembert-base\")\n",
     "\n",
-    "nphrase=2\n",
-    "TR=TextRank(tok_path='MLSUM_tokenizer.model',cpu=1)\n",
-    "BS=BERTScore('MLSUM_tokenizer.model',cpu=1)\n",
+    "# nphrase=2\n",
+    "# TR=TextRank(tok_path='MLSUM_tokenizer.model',cpu=1)\n",
+    "# BS=BERTScore('MLSUM_tokenizer.model',cpu=1)\n",
     "\n",
-    "W2V=gensim.models.Word2Vec.load(\"W2V_all.model\")\n",
-    "TRB=partial(TR.make_resume,type='bert',modele=camem,k=nphrase,get_score_only=True)\n",
-    "TRW=partial(TR.make_resume,type='word2vec',modele=W2V,k=nphrase,get_score_only=True)\n",
-    "BSR=BS.make_score\n",
-    "L3=partial(Lead_3,k=nphrase)\n",
-    "RS=partial(Random_summary,get_index_only=True)\n",
+    "# W2V=gensim.models.Word2Vec.load(\"W2V_all.model\")\n",
+    "# TRB=partial(TR.make_resume,type='bert',modele=camem,k=nphrase,get_score_only=True)\n",
+    "# TRW=partial(TR.make_resume,type='word2vec',modele=W2V,k=nphrase,get_score_only=True)\n",
+    "# BSR=BS.make_score\n",
+    "# L3=partial(Lead_3,k=nphrase)\n",
+    "# RS=partial(Random_summary,get_index_only=True)\n",
     "\n",
-    "taille=100\n",
-    "start=[]\n",
-    "end=[]"
+    "# taille=100\n",
+    "# start=[]\n",
+    "# end=[]"
    ]
   },
   {
@@ -397,6 +393,30 @@
     "               \n",
     "    if i%100==0:\n",
     "        pickle.dump(rendu,open('TRB_sortie.pickle','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/23799 [00:00<?, ?it/s]/opt/conda/lib/python3.7/site-packages/torch/nn/functional.py:652: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool1d(input, kernel_size, stride, padding, dilation, ceil_mode)\n",
+      "  0%|          | 48/23799 [01:16<9:04:41,  1.38s/it] "
+     ]
+    }
+   ],
+   "source": [
+    "sortie=[]\n",
+    "name='Net'\n",
+    "for i in tqdm(range(len(Paragraphes))):\n",
+    "    r=fats.make_DL_resume(Paragraphes[i:i+1],cpu=2,choose_model=name,k=2,camem=camem,get_score_only=True)\n",
+    "    sortie.append(r)\n",
+    "pickle.dump(sortie,open(name+'_sortie.pickle','wb'))"
    ]
   },
   {
